--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth_platform_interface: ^7.6.2
   firebase_auth_web: ^5.14.2
   firebase_core: ^3.13.0
+  cloud_firestore: ^5.6.7
 
 dev_dependencies:
   flutter_test:
