--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_auth_web: ^5.14.2
   firebase_core: ^3.13.0
   cloud_firestore: ^5.6.7
+  google_maps_flutter: ^2.12.2
+  geocoding: ^4.0.0
 
   firebase_messaging: ^15.0.0          
   flutter_local_notifications: ^17.0.0
