tela de relatórios

--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   flutter_local_notifications: ^17.0.0
   shared_preferences: ^2.2.3
 
+  fl_chart: ^0.66.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
